--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نظام حساب تكاليف البناء - العراق</title>
-    <script src="https://unpkg.com/@pdf-lib/fontkit@0.0.4/dist/fontkit.umd.min.js"></script>
     <script src="https://unpkg.com/pdf-lib@1.17.0/dist/pdf-lib.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
@@ -792,34 +791,32 @@
                         console.log('بدء إنشاء ملف PDF باستخدام PDF-lib.js');
 
                         // إنشاء مستند PDF
-                        const { PDFDocument, rgb } = PDFLib;
+                        const { PDFDocument, rgb, StandardFonts } = PDFLib;
                         const pdfDoc = await PDFDocument.create();
                         const pageWidth = 595; // عرض A4 بالنقاط (210mm)
                         const pageHeight = 842; // ارتفاع A4 بالنقاط (297mm)
                         const fontSize = 14;
                         const margin = 30;
 
-                        // تسجيل fontkit
-                        pdfDoc.registerFontkit(fontkit);
-
-                        // تحميل خط Tajawal من ملف محلي
-                        const fontBytes = await fetch('/fonts/Tajawal-Regular.ttf').then(res => res.arrayBuffer());
-                        const tajawalFont = await pdfDoc.embedFont(fontBytes);
+                        // استخدام خط مدمج (Helvetica) بدلاً من تحميل خط خارجي
+                        const helveticaFont = await pdfDoc.embedFont(StandardFonts.Helvetica);
 
                         // دالة لإضافة صفحة جديدة
                         const addPage = () => {
                             const page = pdfDoc.addPage([pageWidth, pageHeight]);
-                            page.setFont(tajawalFont);
+                            page.setFont(helveticaFont);
                             page.setFontSize(fontSize);
                             return page;
                         };
 
                         // دالة لإضافة نص مع دعم الاتجاه من اليمين إلى اليسار
                         const addText = (page, text, x, y, options = {}) => {
-                            page.drawText(text, {
+                            // عكس النص العربي لضمان العرض الصحيح
+                            const reversedText = text.split('').reverse().join('');
+                            page.drawText(reversedText, {
                                 x,
                                 y,
-                                font: tajawalFont,
+                                font: helveticaFont,
                                 size: fontSize,
                                 color: options.color || rgb(0, 0, 0),
                                 ...options
@@ -869,7 +866,7 @@
                                 }
                                 currentItems = currentItems.slice(maxItemsPerPage);
                                 if (currentItems.length > 0) {
-                                    page =대한يPage();
+                                    page = addPage();
                                     y = pageHeight - margin - 20;
                                 }
                             }
